gOttA uSe hTtPs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <title>EText</title>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <script src="../../socket.io/socket.io.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
   </head>
   <body>
