--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,7 +15,7 @@ form {
   bottom: 0;
   width: 100%;
   height: 57.5px;
-  border-color: #000;
+  border-color: #9c9c9c;
   border-top-style: solid;
   border-top-width: 1px;
   padding: 10px;
@@ -28,7 +28,6 @@ form input {
   padding: 10px;
   width: 500px;
   margin-right: 15px;
-  margin-left: 15px;
   vertical-align: middle;
 }
 
@@ -60,9 +59,11 @@ form button:focus{
 }
 
 #messages li {
-  padding: 5px 10px;
-}
-
-#messages li:nth-child(odd) {
-  background: #eee;
+  display: inline-block;
+  padding: 10px 10px;
+  background: #eeee;
+  border: 1px solid #e3e3e3;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
