--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,11 @@
 head
   title EText
-  
+  link(rel='stylesheet' href='css/index.css')
 body
+  header
+    div#icon
+      img(src='img/icon.png')
+      h1 EText
+        h2 Formal, yet efficient
+  main
+  footer
