--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,11 @@ body
   header
     div#icon
       img(src='img/icon.png')
-      h1 EText
+      div#title
+        h1 EText
         h2 Formal, yet efficient
+    div#signIn
+      button Sign in
+      button Sign up
   main
   footer
