--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 head
   title EText
-  link(rel='shortcut icon' href='img/icon.png')
+  link(rel='shortcut icon' href='img/icon-square.png')
   link(rel='stylesheet' href='css/index.css')
 body
   header
