--- a/public/css/index.css
+++ b/public/css/index.css
@@ -59,6 +59,7 @@ body{
 
 button{
   border: 1px solid #e2e2e2;
+  background: #f4f4f4;
   font-size: 24px;
   padding: 10px;
   border-radius: 10px;
@@ -71,8 +72,8 @@ button:hover{
 }
 
 button:active{
-  background: #6d6ae6;
-  color: white;
+  background: #dbdbdb;
+  border-color: #b0b0b0;
 }
 
 button:focus{
