--- a/public/css/index.css
+++ b/public/css/index.css
@@ -28,27 +28,111 @@
   margin-left: 25px;
 }
 
-#signIn{
+#menu{
   float: right;
-  margin-top: 25px;
-  margin-right: 5px;
+  margin-top: 30px;
+  margin-right: 30px;
 }
 
-#signIn button{
-  margin-right: 35px;
+#menu a{
+  margin-top: 0px;
+  margin-right: 40px;
+  font-size: 32px;
+  text-decoration: none;
+  color: white;
+}
+
+#menu a:active.un:after{
+  width: 50%;
 }
 
 /* Classes */
 
+.headline{
+  margin-top: 50px;
+  text-align: center;
+}
+
+.blocks{
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.block{
+  display: inline-block;
+  width: 300px;
+  padding: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border: 1px solid #e2e2e2;
+  border-radius: 25px;
+  background: white;
+  margin-left: 20px;
+  margin-right: 20px;
+  transition: 0.5s;
+  cursor: default;
+  box-shadow: 0px 0px 5px 1px #e2e2e2;
+}
+
+.block  h2{
+  text-align: center;
+  text-decoration: underline;
+  margin-top: 10px;
+}
+
+.block p{
+  font-size: 18px;
+}
+
+.block .icons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.block i{
+  font-size: 40px;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.block:hover{
+  box-shadow: 0px 0px 15px 5px #e2e2e2;
+}
+
+.un {
+  display: inline-block;
+}
+
+.un:after {
+  content: '';
+  width: 0px;
+  height: 2px;
+  display: block;
+  margin: auto;
+  margin-top: 4px;
+  background: white;
+  transition: 0.3s;
+}
+
+.un:hover:after {
+  width: 100%;
+}
+
 /* Tags */
 
 header{
-  background: white;
   border-bottom: 1px solid #e2e2e2;
   display: inline-block;
   width: 100vw;
   padding-top: 25px;
   padding-bottom: 25px;
+  background: #303030;
+  color: white;
 }
 
 body{
