--- a/views/index.pug
+++ b/views/index.pug
@@ -18,23 +18,32 @@ body
     section.blocks
       div.block
         div.icons
-          i(class='fab fa-android')
-          i(class='fab fa-windows')
-          i(class='fab fa-linux')
-          i(class='fab fa-html5')
+          i(class='fab fa-android' style='color: #3ddc84;')
+          i(class='fab fa-windows' style='color: #00a8e8;')
+          i(class='fab fa-linux' style='color: #050505;')
+          i(class='fab fa-html5' style='color: #dd4b25;')
         h2 Cross Platform
         p
-          | EText is Cross Platform meaning that it works on multiple operating
-          | systems.  Such include, Android, Windows, Linux, as well as a web
-          | version for any OS not supported.
+          | EText is Cross Platform, supporting, Android, Windows, Linux,
+          | as well as a web version for any OS not supported.
       div.block
         div.icons
-          i(class='fab fa-osi')
+          i(class='fab fa-osi' style='color: #3da639; font-weight: bold;')
         h2 Open-Source
         p
-          | EText developed using Nodejs, Express, Pug, and
-          | MongoDB.  Check it out on 
-          a(href='https://github.com/jak-inventions/EText') github.
+          | EText is built with Nodejs, Express, Pug, and MongoDB.  Check it
+          | out on github 
+          a(href='https://github.com/jak-inventions/EText') here
+          |.
+      div.block
+        div.icons
+          i(class='fa fa-comment')
+          span +
+          i(class='fa fa-envelope')
+        h2 Suitable for any Occassion
+        p
+          | EText mixes elements of texting and email making it suitable for
+          | both formal and casual messaging.
     
   footer
     script(src='https://kit.fontawesome.com/9ff649492a.js' crossorigin='anonymous')
