--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ body
     div#menu
       a(href='/platforms').un Platforms
       a(href='https://github.com/jak-inventions/EText').un Github
-      a(href='/signIn').un Sign in
+      button Sign in
   main
     h1.headline Messaging for all platforms
     section.blocks
