--- a/views/index.pug
+++ b/views/index.pug
@@ -22,9 +22,9 @@ body
           i(class='fab fa-windows' style='color: #00a8e8;')
           i(class='fab fa-linux' style='color: #050505;')
           i(class='fab fa-html5' style='color: #dd4b25;')
-        h2 Cross Platform
+        h2 Cross-Platform
         p
-          | EText is Cross Platform, supporting, Android, Windows, Linux,
+          | EText is Cross-Platform, supporting, Android, Windows, Linux,
           | as well as a web version for any OS not supported.
       div.block
         div.icons
@@ -40,7 +40,7 @@ body
           i(class='fa fa-comment')
           span +
           i(class='fa fa-envelope')
-        h2 Suitable for any Occassion
+        h2 Suitable for any Conversation
         p
           | EText mixes elements of texting and email making it suitable for
           | both formal and casual messaging.
