--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ head
   title EText
   link(rel='shortcut icon' href='img/icon-square.png')
   link(rel='stylesheet' href='css/index.css')
+  meta(name='viewport' content='width=device-width, user-scalable=no')
 body
   header
     div#icon
@@ -12,7 +13,7 @@ body
     div#menu
       a(href='/platforms').un Platforms
       a(href='https://github.com/jak-inventions/EText').un Github
-      button Sign in
+      a(href='/signin').un Sign in
   main
     h1.headline Messaging for all platforms
     section.blocks
