--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,12 +31,13 @@
 #menu{
   float: right;
   margin-top: 30px;
-  margin-right: 30px;
+  margin-right: 20px;
 }
 
 #menu a,button{
   margin-top: 0px;
-  margin-right: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
   font-size: 32px;
   text-decoration: none;
   color: white;
@@ -214,6 +215,10 @@ i{
     margin: auto;
     width: 250px;
     margin-bottom: 50px;
+  }
+
+  #menu a:active.un:after{
+    width: 100%;
   }
 
 }
