--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ head
   title EText
   link(rel='shortcut icon' href='img/icon-square.png')
   link(rel='stylesheet' href='css/index.css')
+  link(rel='stylesheet' href='css/home.css')
   meta(name='viewport' content='width=device-width, user-scalable=no')
 body
   header
