--- a/views/signIn.pug
+++ b/views/signIn.pug
@@ -8,6 +8,11 @@ body
   header
     
   main
-    
+    section#card
+      h1 
+        u Sign in
+      form(action='' method='post')
+        input(placeholder='email' type='email')
+        input(placeholder='password' type='password')
   footer
     script(src='https://kit.fontawesome.com/9ff649492a.js' crossorigin='anonymous')
