--- a/public/css/signIn.css
+++ b/public/css/signIn.css
@@ -3,11 +3,47 @@
 
 /* Ids */
 
+#card{
+  margin: auto;
+  width: 400px;
+  height: 450px;
+  background: white;
+  box-shadow: 0px 0px 20px 5px #e2e2e2;
+  border: 2px solid #e2e2e2;
+  border-radius: 10px;
+}
+
+#card h1{
+  font-size: 32px;
+  text-align: center;
+}
+
+#card form{
+
+}
+
+#card input[type=email], input[type=password]{
+  display: block;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding: 10px;
+  font-size: 28px;
+  border: 1px solid #e2e2e2;
+  border-radius: 5px;
+}
+
 /* Classes */
 
 /* Tags */
 
 /* Other */
+
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 /* Mobile */
 
