--- a/views/signIn.pug
+++ b/views/signIn.pug
@@ -14,5 +14,7 @@ body
       form(action='' method='post')
         input(placeholder='email' type='email')
         input(placeholder='password' type='password')
+        a(href='/forgotPassword') forgot password?
+        button(type='submit') Sign in
   footer
     script(src='https://kit.fontawesome.com/9ff649492a.js' crossorigin='anonymous')
