--- a/views/signIn.pug
+++ b/views/signIn.pug
@@ -16,5 +16,7 @@ body
         input(placeholder='password' type='password')
         a(href='/forgotPassword') forgot password?
         button(type='submit') Sign in
+        span#createAccount
+          a(href='signUp') Create an account
   footer
     script(src='https://kit.fontawesome.com/9ff649492a.js' crossorigin='anonymous')
