--- a/public/css/signIn.css
+++ b/public/css/signIn.css
@@ -4,7 +4,6 @@
 /* Ids */
 
 #card{
-  display: block;
   margin: auto;
   width: auto;
   height: auto;
@@ -34,7 +33,6 @@
   margin-bottom: 25px;
   padding: 10px;
   font-size: 22px;
-  border: 1px solid #e2e2e2;
   border-radius: 5px;
   width: 350px;
 }
@@ -74,6 +72,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 /* Mobile */
