--- a/views/signIn.pug
+++ b/views/signIn.pug
@@ -6,7 +6,7 @@ head
   meta(name='viewport' content='width=device-width, user-scalable=no')
 body
   header
-    
+    a#backButton(href='/') ↩
   main
     section#card
       h1 
