--- a/public/css/signIn.css
+++ b/public/css/signIn.css
@@ -62,6 +62,14 @@
   text-align: center;
 }
 
+#backButton{
+  position: absolute;
+  left: 25px;
+  top: 25px;
+  font-size: 42px;
+  text-decoration: none;
+}
+
 /* Classes */
 
 /* Tags */
@@ -78,5 +86,16 @@ body{
 /* Mobile */
 
 @media (max-width: 850px) {
+
+  #card{
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  #card input[type=email], input[type=password]{
+    padding: 10px;
+    font-size: 18px;
+    width: 275px;
+  }
 
 }
