--- a/public/css/signIn.css
+++ b/public/css/signIn.css
@@ -20,6 +20,7 @@
   font-size: 32px;
   text-align: center;
   margin: 0px;
+  margin-bottom: 30px;
 }
 
 #card form{
@@ -53,7 +54,7 @@
   border-color: #c9c9c9;
 }
 
-#card a{
+#card form a{
   font-size: 18px;
 }
 
@@ -64,8 +65,7 @@
 
 #backButton{
   position: absolute;
-  left: 25px;
-  top: 25px;
+  left: auto;
   font-size: 42px;
   text-decoration: none;
 }
