--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,8 @@ head
 body
   header
     div#icon
-      img(src='img/icon.png')
+      a(href='/')
+        img(src='img/icon.png')
       div#title
         h1 EText (Pre-Alpha)
         h2 Formal, yet efficient
