--- a/views/signIn.pug
+++ b/views/signIn.pug
@@ -6,6 +6,16 @@ head
   meta(name='viewport' content='width=device-width, user-scalable=no')
 body
   header
+    div#icon
+      a(href='/')
+        img(src='img/icon.png')
+      div#title
+        h1 EText (Pre-Alpha)
+        h2 Formal, yet efficient
+    div#menu
+      a(href='/platforms').un Platforms
+      a(href='https://github.com/jak-inventions/EText').un Github
+      a(href='/').un Home
   main
     section#card
       a#backButton(href='/') ↩
