--- a/views/signIn.pug
+++ b/views/signIn.pug
@@ -12,9 +12,12 @@ body
       div#title
         h1 EText (Pre-Alpha)
         h2 Formal, yet efficient
+    hr.mobileOnly.medium
     div#menu
       a(href='/platforms').un Platforms
+      div.divider |
       a(href='https://github.com/jak-inventions/EText').un Github
+      div.divider |
       a(href='/').un Home
   main
     section#card
