--- a/public/css/signIn.css
+++ b/public/css/signIn.css
@@ -80,6 +80,7 @@ main{
   #card{
     padding-left: 25px;
     padding-right: 25px;
+    margin-bottom: 100px;
   }
 
   #card input[type=email], input[type=password]{
