--- a/views/index.pug
+++ b/views/index.pug
@@ -28,14 +28,16 @@ body
           i(class='fab fa-windows' style='color: #00a8e8;')
           i(class='fab fa-linux' style='color: #050505;')
           i(class='fab fa-html5' style='color: #dd4b25;')
-        h2 Cross-Platform
+        h2
+          u Cross-Platform
         p
           | EText is Cross-Platform, supporting, Android, Windows, Linux,
           | as well as a web version for any OS not supported.
       div.block
         div.icons
           i(class='fab fa-osi' style='color: #3da639; font-weight: bold;')
-        h2 Open-Source
+        h2
+          u Open-Source
         p
           | EText is built with Nodejs, Express, Pug, and MongoDB.  Check it
           | out on github 
@@ -46,7 +48,8 @@ body
           i(class='fa fa-comment')
           span +
           i(class='fa fa-envelope')
-        h2 Suitable for any Conversation
+        h2
+          u Suitable for any Conversation
         p
           | EText mixes elements of texting and email making it suitable for
           | both formal and casual messaging.
