--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,47 +2,67 @@
 /* Ids */
 
 #icon{
-  width: 90px;
-  height: 90px;
-  display: inline;
-  vertical-align: middle;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  margin: 25px;
 }
 
-#title{
+#loginDialogue{
+  width: 500px;
+  height: auto;
+  background: white;
+  border: 1px solid #e6e6e6;
+  border-radius: 15px;
   display: inline-block;
-  vertical-align: middle;
-  line-height: 100%;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
-#title h1{
-  font-size: 26px;
+#loginDialogue h1{
+  text-align: center;
+  margin-top: 0px;
 }
 
-#title h2{
-  font-size: 20px;
+#loginDialogue input, button{
+  display: block;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 0px;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 18px;
+  transition: 0.5s border-color;
+}
+
+#loginDialogue input, button:active{
+  border-color: #c9c9c9;
+}
+
+#loginDialogue input{
+  width: 80%;
+
 }
 
 /* Classes */
 
 /* Tags */
 
-header{
-  background-color: #6f68e4;
-  color: white;
-  display: inline-block;
-  width: 100vw;
+main{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
-header .left{
-  float: left;
+hr{
+  border: 1px solid #e6e6e6;
 }
 
-header .right{
-  float: right;
-}
-
-body{
-  margin: 0px;
+hr.small{
+  width: 25%;
 }
 
 /* Other */
