--- a/views/login.pug
+++ b/views/login.pug
@@ -8,13 +8,13 @@ head
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap')
 body
   header
-    section.left
-      img(src='img/icon-clear.png' alt='EText')#icon
-      div#title
-        h1 EText
-        h2 Formal, yet efficient
-    section.right
-      a Download
-      a Login
+    img(src='/img/icon.png')#icon
   main
+    article#loginDialogue
+      h1 Login
+      hr.small
+      form(action='/api/user/login' method='POST')
+        input(type='email' name='email' placeholder='Email')
+        input(type='password' name='password' placeholder='Password')
+        button(type='submit') Login
   footer
