--- a/public/css/login.css
+++ b/public/css/login.css
@@ -25,7 +25,7 @@
   margin-top: 0px;
 }
 
-#loginDialogue input, button{
+#loginDialogue input,button{
   display: block;
   margin: auto;
   margin-top: 25px;
@@ -34,16 +34,28 @@
   border-radius: 5px;
   padding: 10px;
   font-size: 18px;
-  transition: 0.5s border-color;
-}
-
-#loginDialogue input, button:active{
-  border-color: #c9c9c9;
+  transition: 0.5s border-color, 0.5s background-color;
 }
 
 #loginDialogue input{
   width: 80%;
+}
 
+#loginDialogue input:focus{
+  border-color: #1a73e8;
+}
+
+#loginDialogue button:focus{
+  border-color: #1a73e8;
+}
+
+#loginDialogue button:hover{
+  background-color: white;
+}
+
+#loginDialogue button:active{
+  background-color: #e6e6e6;
+  border-color: #b5b5b5;
 }
 
 /* Classes */
