--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,14 +1,6 @@
 
 /* Ids */
 
-#icon{
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  border-radius: 20px;
-  margin: 25px;
-}
-
 #loginDialogue{
   width: 500px;
   height: auto;
@@ -34,7 +26,7 @@
   border-radius: 5px;
   padding: 10px;
   font-size: 18px;
-  transition: 0.5s border-color, 0.5s background-color;
+  transition: 0.25s border-color, 0.25s background-color;
 }
 
 #loginDialogue input{
@@ -56,6 +48,22 @@
 #loginDialogue button:active{
   background-color: #e6e6e6;
   border-color: #b5b5b5;
+}
+
+#forgotPassword{
+  display: inline-block;
+  color: #303030;
+  margin-top: 15px;
+  margin-left: 50px;
+  transition: 0.25s color;
+}
+
+#forgotPassword:active{
+  color: #1a73e8;
+}
+
+#forgotPassword:focus{
+  text-decoration-color: #1a73e8;
 }
 
 /* Classes */
