--- a/views/login.pug
+++ b/views/login.pug
@@ -8,7 +8,6 @@ head
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap')
 body
   header
-    img(src='/img/icon.png')#icon
   main
     article#loginDialogue
       h1 Login
@@ -16,5 +15,6 @@ body
       form(action='/api/user/login' method='POST')
         input(type='email' name='email' placeholder='Email')
         input(type='password' name='password' placeholder='Password')
+        a(href='/forgotPassword')#forgotPassword Forgot password
         button(type='submit') Login
   footer
