--- a/public/css/login.css
+++ b/public/css/login.css
@@ -83,8 +83,18 @@ hr{
 
 hr.small{
   width: 25%;
+  animation: grow 1s ease-out;
 }
 
 /* Other */
+
+@keyframes grow {
+  from{
+    width: 0%;
+  }
+  to{
+    width: 25%;
+  }
+}
 
 /* Mobile */
