--- a/views/login.pug
+++ b/views/login.pug
@@ -17,4 +17,6 @@ body
         input(type='password' name='password' placeholder='Password')
         a(href='/forgotPassword')#forgotPassword Forgot password
         button(type='submit') Login
+        span#createAccount
+          a(href='/register') Create an account
   footer
