--- a/public/css/index.css
+++ b/public/css/index.css
@@ -14,6 +14,14 @@ button{
   cursor: pointer;
 }
 
+input,button{
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 18px;
+  transition: 0.25s border-color, 0.25s background-color;
+}
+
 /* Other */
 
 *{
