--- a/views/login.pug
+++ b/views/login.pug
@@ -1,6 +1,7 @@
 head
   title EText | Login
   link(rel='shortcut icon' href='img/icon.png')
+  meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
   link(rel='stylesheet' href='css/index.css')
   link(rel='stylesheet' href='css/login.css')
@@ -8,6 +9,16 @@ head
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap')
 body
   header
+    div.left
+      a(href='/')
+        img(src='img/icon-clear.png')#icon
+      span#title
+        h1 EText
+        h2 Formal, yet efficient
+    div.right
+      span#menu
+        //a Thing 1
+        //a Thing 2
   main
     article#loginDialogue
       h1 Login
