--- a/views/login.pug
+++ b/views/login.pug
@@ -20,7 +20,7 @@ body
         //a Thing 1
         //a Thing 2
   main
-    form(action='/api/user/login' method='POST')#loginDialogue
+    form(action='/api/user/login' method='POST')#dialogue
       h1 Login
       hr.small
       input(type='email' name='email' placeholder='Email')
