--- a/views/register.pug
+++ b/views/register.pug
@@ -20,7 +20,7 @@ body
         //a Thing 1
         //a Thing 2
   main
-    form(action='/api/user/register' method='POST')#loginDialogue
+    form(action='/api/user/register' method='POST')#dialogue
       h1 Sign up
       hr.small
       span#name
