--- a/views/login.pug
+++ b/views/login.pug
@@ -22,7 +22,7 @@ body
   main
     form(action='/api/user/login' method='POST')#dialogue
       h1 Login
-      hr.small
+      hr.medium
       input(type='email' name='email' placeholder='Email')
       input(type='password' name='password' placeholder='Password')
       a(href='/forgotPassword')#forgotPassword Forgot password
