--- a/views/register.pug
+++ b/views/register.pug
@@ -22,7 +22,7 @@ body
   main
     form(action='/api/user/register' method='POST')#dialogue
       h1 Sign up
-      hr.small
+      hr.medium
       span#name
         input(type='text' name='firstName' placeholder='First name')
         input(type='text' name='lastName' placeholder='Last name')
