--- a/views/reset.pug
+++ b/views/reset.pug
@@ -4,7 +4,7 @@ head
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
   link(rel='stylesheet' href='css/index.css')
-  link(rel='stylesheet' href='css/forgotPassword.css')
+  link(rel='stylesheet' href='css/reset.css')
   // Fonts
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap')
 body
@@ -20,10 +20,9 @@ body
         a(href='/login').un Login
   main
     form(action='/api/user/forgotPassword' method='POST')#dialogue
-      h1 Forgot password
+      h1 New password
       hr.medium
-      input(type='email' name='email' placeholder='Email')
+      input(type='password' name='password' placeholder='New password')
+      input(type='password' name='confirm' placeholder='Confirm password')
       button(type='submit') Reset password
-      span#login Back to 
-        a(href='/login') login
   footer
