--- a/views/forgotPassword.pug
+++ b/views/forgotPassword.pug
@@ -1,5 +1,5 @@
 head
-  title EText | Login
+  title EText | Forgot password
   link(rel='shortcut icon' href='img/icon.png')
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
