--- a/views/messaging.pug
+++ b/views/messaging.pug
@@ -4,7 +4,7 @@ head
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
   link(rel='stylesheet' href='css/index.css')
-  link(rel='stylesheet' href='css/login.css')
+  link(rel='stylesheet' href='css/messaging.css')
   // Fonts
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap')
 body
@@ -19,5 +19,6 @@ body
       span#menu
         a(href='/register').un Register
   main
-    
+  form#dialogue
+    h1 messaging
   footer
