reset password might work now

--- a/views/forgotPassword.pug
+++ b/views/forgotPassword.pug
@@ -1,17 +1,17 @@
 head
   title EText | Forgot password
-  link(rel='shortcut icon' href='img/icon.png')
+  link(rel='shortcut icon' href='/img/icon.png')
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
-  link(rel='stylesheet' href='css/index.css')
-  link(rel='stylesheet' href='css/forgotPassword.css')
+  link(rel='stylesheet' href='/css/index.css')
+  link(rel='stylesheet' href='/css/forgotPassword.css')
   // Fonts
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap')
 body
   header
     div.left
       a(href='/')
-        img(src='img/icon-clear.png')#icon
+        img(src='/img/icon-clear.png')#icon
       span#title
         h1 EText
         h2 Formal, yet efficient
