--- a/views/reset.pug
+++ b/views/reset.pug
@@ -26,3 +26,4 @@ body
       input(type='password' name='confirm' placeholder='Confirm password')
       button(type='submit') Reset password
   footer
+    script(src='/js/index.js')
