--- a/views/messaging.pug
+++ b/views/messaging.pug
@@ -19,7 +19,10 @@ body
       span#menu
         button(type='submit').un.menuButton Logout
   main
-  form#dialogue
-    h1 messaging
+    section#dashboard
+      div#contacts
+        
+      div#conversation
+        
   footer
     script(src='/js/index.js')
