--- a/views/messaging.pug
+++ b/views/messaging.pug
@@ -19,10 +19,11 @@ body
       span#menu
         button(type='submit').un.menuButton Logout
   main
-    section#dashboard
+    section#dialogue
       div#contacts
         
       div#conversation
+        
         
   footer
     script(src='/js/index.js')
