--- a/views/register.pug
+++ b/views/register.pug
@@ -28,7 +28,7 @@ body
       input(type='email' name='email' placeholder='Email')
       input(type='password' name='password' placeholder='Password')
       input(type='password' name='confirm' placeholder='Confirm password')
-      button(type='submit') Login
+      button(type='submit') Register
       span#login
         | Already have an account? 
         a(href='/login') Login
