--- a/views/login.pug
+++ b/views/login.pug
@@ -1,25 +1,19 @@
 head
   title EText | Login
-  link(rel='shortcut icon' href='/img/icon.png')
+  link(rel='shortcut icon' href='/img/icon-light-background.png')
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
   link(rel='stylesheet' href='/css/index.css')
+  link(rel='stylesheet' href='/css/auth.css')
   link(rel='stylesheet' href='/css/login.css')
   // Fonts
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap')
 body
   header
-    div.left
-      a(href='/')
-        img(src='/img/icon-clear.png')#icon
-      span#title
-        h1 EText
-        h2 Formal, yet efficient
-    div.right.desktopOnly
-      span#menu
-        a(href='/register').un Register
+    a(href='/') 
+      img(src='./img/icon.svg', alt='EText')
   main
-    form(action='/api/user/login' method='POST')#dialogue
+    form(action='/api/user/login' method='POST')
       h1 Login
       hr.medium
       input(type='email' name='email' placeholder='Email')
