--- a/views/register.pug
+++ b/views/register.pug
@@ -4,22 +4,16 @@ head
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
   link(rel='stylesheet' href='/css/index.css')
+  link(rel='stylesheet' href='/css/auth.css')
   link(rel='stylesheet' href='/css/register.css')
   // Fonts
   link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap')
 body
   header
-    div.left
-      a(href='/')
-        img(src='/img/icon-clear.png')#icon
-      span#title
-        h1 EText
-        h2 Formal, yet efficient
-    div.right.desktopOnly
-      span#menu
-        a(href='/login').un Login
+   a(href='/')
+    img(src='./img/icon.svg', alt='EText')
   main
-    form(action='/api/user/register' method='POST')#dialogue
+    form(action='/api/user/register' method='POST')
       h1 Sign up
       hr.medium
       span#name
