--- a/views/register.pug
+++ b/views/register.pug
@@ -1,6 +1,6 @@
 head
   title EText | Register
-  link(rel='shortcut icon' href='/img/icon.png')
+  link(rel='shortcut icon' href='/img/icon-light-background.png')
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
   link(rel='stylesheet' href='/css/index.css')
@@ -28,3 +28,4 @@ body
         a(href='/login') Login
   footer
     script(src='/js/index.js')
+    script(src='/js/parseMessages.js')
