--- a/views/forgotPassword.pug
+++ b/views/forgotPassword.pug
@@ -1,6 +1,6 @@
 head
   title EText | Forgot password
-  link(rel='shortcut icon' href='/img/icon.png')
+  link(rel='shortcut icon' href='/img/icon-light-background.png')
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
   link(rel='stylesheet' href='/css/index.css')
@@ -21,3 +21,4 @@ body
       a(href='/login')#back ↩ Back
   footer
     script(src='/js/index.js')
+    script(src='/js/parseMessages.js')
