--- a/views/reset.pug
+++ b/views/reset.pug
@@ -1,6 +1,6 @@
 head
   title EText | Reset password
-  link(rel='shortcut icon' href='/img/icon.png')
+  link(rel='shortcut icon' href='/img/icon-light-background.png')
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
   link(rel='stylesheet' href='/css/index.css')
@@ -21,3 +21,4 @@ body
       button(type='submit') Reset password
   footer
     script(src='/js/index.js')
+    script(src='/js/parseMessages.js')
