--- a/views/messaging.pug
+++ b/views/messaging.pug
@@ -1,6 +1,6 @@
 head
   title EText | Messaging
-  link(rel='shortcut icon' href='/img/icon.png')
+  link(rel='shortcut icon' href='/img/icon-light-background.png')
   meta(name='viewport' content='width=device-width, user-scalable=no')
   // CSS Imports
   link(rel='stylesheet' href='/css/index.css')
