--- a/views/messaging.pug
+++ b/views/messaging.pug
@@ -11,6 +11,7 @@ body
   header
     
   main
+    nav
     | Now you're logged in 
     form(action='api/user/logout' method='POST')
       button(type='submit') Logout
