--- a/views/messaging.pug
+++ b/views/messaging.pug
@@ -14,6 +14,8 @@ body
       button(type='submit') Logout
   nav
   main 
-        
+      form(action='/api/message/send')
+        input(type='text')
+        button(type='submit') Send   
   footer
     script(src='/js/index.js')
